# gnss-tid

./: .gitignore  README.md  analysis.ipynb  batch_run_save_all.py  coords.py  data_description.md  environment.yml  figures.ipynb  focusing_greg.py  jup_20251212.ipynb  plot_roti.ipynb  plot_save_all.py  pyproject.toml  scratch copy.ipynb  scratch.ipynb  scratch.py  synthetic error analysis.ipynb  synthetic_image_interp.ipynb
conf/: config.yaml  debug.yaml
conf/event/: 20150325.yaml
conf/focus/: image_test.yaml  spectral.yaml
conf/focus/image_maker/: metpy.yaml  rbf.yaml
notebooks/: 20251216_img.ipynb  20260126_planar.ipynb  20260202_bias.ipynb  20260220_dask.ipynb  analysis.ipynb  figures.ipynb  scratch copy.ipynb  spline method.ipynb  synthetic_image_interp.ipynb
src/: agu_parameters_from_autofocus.py  coords.py  estimator_analysis.py  estimator_study.py  focusing_radial.py  focusing_radial_quad.py  focusing_spectral.py  focusing_v1.py  image.py  main.py  make_animation.py  plotting.py  pointdata.py  read.py  run_estimator.py  spectral.py  test_coords.py  utils.py
src/gnss_tid/: coords.py  image.py  main.py  old_pointdata.py  parameter.py  plotting.py  pointdata.py  radial.py  run_estimator.py  run_synthetic_exp.py  spectral.py  synthetic.py  utils.py
src/gnss_tid/conf/: config.yaml  debug.yaml  exp_config.yaml  param_config.yaml
src/gnss_tid/conf/client/: laptop.yaml  sagan.yaml  sagan_exp.yaml
src/gnss_tid/conf/event/: 20150325.yaml  20150325_2half.yaml  20150325_full.yaml  20150325_half.yaml  20150325_midnight_short.yaml  20150325_missing_test.yaml  20150325_short.yaml  old_pointdata.yaml
src/gnss_tid/conf/focus/: image.yaml  spectral.yaml  timesmooth.yaml
src/gnss_tid/conf/focus/center_finder/: radial.yaml  stationary.yaml
src/gnss_tid/conf/focus/image_maker/: barnes.yaml  metpy.yaml  natural_neighbor.yaml  rbf.yaml
