[project]
name = "gnss-tid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argon2-cffi-bindings<25.1",
    "bokeh>=3.8.1",
    "cartopy<0.25",
    "colorcet>=3.1.0",
    "contourpy<1.3",
    "dask>=2025.12.0",
    "h5py<3.15",
    "holoviews>=1.22.1",
    "hydra-core>=1.3.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "metpy>=1.7.1",
    "netcdf4<1.7",
    "numpy<2.3",
    "pandas<2.3",
    "pymap3d>=3.2.0",
    "pyproj<3.7",
    "pyzmq<27.0",
    "scikit-image>=0.25.2",
    "scikit-learn<1.8",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "torch<2.7",
    "tqdm-joblib>=0.0.5",
    "xarray>=2025.12.0",
    "zarr>=3.1.5",
]

[project.scripts]
tid = "gnss_tid.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/gnss_tid"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]

[tool.uv]
build-constraint-dependencies = ["numpy<2.3"]
